Created MathJax and edited PageRank post
Implementing plugins is as simple as going into site -> post -> index.html and adding it to the part just before <\head>
Hopefully it works!

--- a/_posts/2023-12-30-PageRank.md
+++ b/_posts/2023-12-30-PageRank.md
@@ -8,15 +8,16 @@ tags: [Python, NumPy, Linear Algebra]
 
 If you’re using this post to find answers for your own PageRank, I strongly encourage you to fiddle around with your code more to see if you can get it to work. If you absolutely can’t figure it out, don’t just copy the code here, but find out why the code below works compared to what you had written.
 
-Reflection:
+**Reflection:**
 I found this mini-model of a PageRank algorithm to wonderfully combine key aspects of eigenvectors/eigenvalues, normalization, and the damping effect within a real-world application. Though, I’ve felt that the Python code isn’t explained very well in this assignment so I have made some annotations that will hopefully help to understand it if you are very new to python like myself. I have always imagined Google’s PageRank system as a web-crawler from a class I took in high school that explained it in that way, and by finding out how it works by making it myself, it definitely reinforces that idea. 
 In linear algebra it often helps to think about matrices and vectors within a 2 or 3 dimensional space. However, in this case, that idea is abstracted to apply to a more logical application where we work with a 2-D square matrix that represents the links to all other pages on our mini-internets.
 
 
 
-## Part 1 - Worksheet
-The majority of this blog was written by instructors from the online coursera course “Mathematics for machine learning” from the Imperial College of London with slight changes and notes from me which make it easier to refer to for study.
-Introduction
+# Part 1 - Worksheet
+The majority of this blog was written by instructors from the online coursera course “Mathematics for Machine Learning” from the Imperial College of London with slight changes and notes from me which make it easier to refer to for study.
+
+**Introduction**
 PageRank (developed by Larry Page and Sergey Brin) revolutionized web search by generating a ranked list of web pages based on the underlying connectivity of the web. The PageRank algorithm is based on an ideal random web surfer who, when reaching a page, goes to the next page by clicking on a link. The surfer has equal probability of clicking any link on the page and, when reaching a page with no links, has equal probability of moving to any other page by typing in its URL. In addition, the surfer may occasionally choose to type in a random URL instead of following the links on a page. The PageRank is the ranked order of the pages from the most to the least probable page the surfer will be viewing.
 
 
@@ -29,49 +30,50 @@ from readonly.PageRankFunctions import *
 np.set_printoptions(suppress=True)
 ```
 
-What does each line of this python code mean?
+**What does each line of this python code mean?**
 
 This Python code snippet is set up for numerical and scientific computing, particularly for tasks related to linear algebra, which is often used in fields like physics, engineering, and data science. Here's what each line of the code does and an explanation of NumPy:
 
 
-%pylab notebook
+**%pylab notebook**
 
 %pylab is a function in IPython that loads NumPy and Matplotlib into the current namespace, providing a MATLAB-like interactive environment. The notebook option allows these interactive features to be used within a Jupyter notebook, enabling inline plotting and other interactive features.
 
 
-import numpy as np
+**import numpy as np**
 
 This line imports the NumPy library and renames it as np. NumPy is a fundamental package for scientific computing in Python. It provides support for large, multi-dimensional arrays and matrices, along with a collection of mathematical functions to operate on these arrays.
 
 
-import numpy.linalg as la
+**import numpy.linalg as la**
 
 This imports the linear algebra module (linalg) from NumPy and renames it as la. This module provides a range of functions for matrix operations, including solving equations, finding eigenvalues, and matrix decompositions, among other things.
 
 
-from readonly.PageRankFunctions import *
+__from readonly.PageRankFunctions import *__
 
 This line imports all functions from the module PageRankFunctions located in a readonly directory. The exact functions aren't specified, but based on the name, it's likely that these are functions related to calculating or analyzing PageRank, which is an algorithm used by Google Search to rank web pages in their search engine results.
 
 
-np.set_printoptions(suppress=True)
+**np.set_printoptions(suppress=True)**
 
 This sets the print options for NumPy. The suppress=True option means that very small floating-point numbers will be suppressed, which typically means they'll be displayed as zero instead of using scientific notation. This makes the output more readable, especially when dealing with very small numbers in matrices or arrays.
 
 
-Ok, but what even is NumPy?
+**Ok, but what even is NumPy?**
 
 NumPy (Numerical Python) is an open-source Python library that's the foundational package for scientific computing in Python. It provides support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays. It's known for its high performance, ease of use, and interoperability with other libraries and programming languages. It's widely used in academic and industrial settings, particularly for data analysis, machine learning, engineering, and scientific research.
 
 
 
-###PageRank as a linear algebra problem
+### PageRank as a linear algebra problem
 
 Let's imagine a micro-internet, with just 6 websites (Avocado, Bullseye, CatBabel, Dromeda, eTings, and FaceSpace). 
 Each website links to some of the others, and this forms a network as shown,
 ![A Micro-Internet](\assets\AMicroInternet.png)
 
 The design principle of PageRank is that important websites will be linked to by important websites. This somewhat recursive principle will form the basis of our thinking.
+
 Imagine we have 100 Procrastinating Pats on our micro-internet, each viewing a single website at a time. Each minute the Pats follow a link on their website to another site on the micro-internet. After a while, the websites that are most linked to will have more Pats visiting them, and in the long run, each minute for every Pat that leaves a website, another will enter keeping the total numbers of Pats on each website constant. The PageRank is simply the ranking of websites by how many Pats they have on them at the end of this process.
 
 We represent the number of Pats on each website with the vector,
@@ -93,8 +95,11 @@ $$
 And say that the number of Pats on each website in minute $i+1$ is related to those at minute $i$ by the matrix transformation
 
 
+
 $$ \mathbf{r}^{(i+1)} = L \,\mathbf{r}^{(i)}$$
+
 with the matrix $L$ taking the form,
+
 $$ L = \begin{bmatrix}
 L_{A→A} & L_{B→A} & L_{C→A} & L_{D→A} & L_{E→A} & L_{F→A} \\
 L_{A→B} & L_{B→B} & L_{C→B} & L_{D→B} & L_{E→B} & L_{F→B} \\
@@ -104,11 +109,14 @@ L_{A→E} & L_{B→E} & L_{C→E} & L_{D→E} & L_{E→E} & L_{F→E} \\
 L_{A→F} & L_{B→F} & L_{C→F} & L_{D→F} & L_{E→F} & L_{F→F} \\
 \end{bmatrix}
 $$
+
+
 where the columns represent the probability of leaving a website for any other website, and sum to one.
 The rows determine how likely you are to enter a website from any other, though these need not add to one.
 The long time behaviour of this system is when $ \mathbf{r}^{(i+1)} = \mathbf{r}^{(i)}$, so we'll drop the superscripts here, and that allows us to write,
-$$ L \,\mathbf{r} = \mathbf{r}$$
 
+
+$$ L \,\mathbf{r} = \mathbf{r}$$
 
 which is an eigenvalue equation for the matrix $L$, with eigenvalue 1 (this is guaranteed by the probabalistic structure of the matrix $L$).
 
@@ -130,8 +138,10 @@ L = np.array([[0,   1/2, 1/3, 0, 0,   0 ],
 ```
 
 
+
 In principle, we could use a linear algebra library, as below, to calculate the eigenvalues and vectors. And this would work for a small system. But this gets unmanageable for large systems. And since we only care about the principal eigenvector (the one with the largest eigenvalue, which will be 1 in this case), we can use the power iteration method which will scale better, and is faster for large systems.
 The code below demonstrates the PageRank for this micro-internet.
+
 
 
 ```python
@@ -147,23 +157,38 @@ r = eVecs[:, 0] # Sets r to be the principal eigenvector
 # Normalizes this eigenvector sum to one, then multiplied by 100 Procrastinating Pats to represent percentages
 ```
 
-Output: array([ 16.        ,   5.33333333,  40.        ,  25.33333333,
+Output: 
+
+array([ 16.        ,   5.33333333,  40.        ,  25.33333333,
          0.        ,  13.33333333])
 
 
 We can see from this list, the number of Procrastinating Pats that we expect to find on each website after long times. Putting them in order of popularity (based on this metric), the PageRank of this micro-internet is:
-CatBabel, Dromeda, Avocado, FaceSpace, Bullseye, eTings
-Referring back to the micro-internet diagram, is this what you would have expected? Convince yourself that based on which pages seem important given which others link to them, that this is a sensible ranking.
+
+**CatBabel, Dromeda, Avocado, FaceSpace, Bullseye, eTings**
+
+Referring back to the micro-internet diagram, is this what you would have expected? 
+
+Convince yourself that based on which pages seem important given which others link to them, that this is a sensible ranking.
 Let's now try to get the same result using the Power-Iteration method that was covered in the video. This method will be much better at dealing with large systems.
+
 First let's set up our initial vector,  r^(0), so that we have our 100 Procrastinating Pats equally distributed on each of our 6 websites.
+
+
 ```python
 r = 100 * np.ones(6) / 6 # Sets up this vector (6 entries of 1/6 × 100 each)
 r # Shows it's value
 ```
-Output: array([ 16.66666667,  16.66666667,  16.66666667,  16.66666667,
-        16.66666667,  16.66666667])
+Output: 
+
+array([16.66666667, 16.66666667, 16.66666667, 16.66666667, 16.66666667, 16.66666667])
+
+
+
 Next, let's update the vector to the next minute, with the matrix 
 L.  Run the following cell multiple times, until the answer stabilizes.
+
+
 ```python
 r = L @ r # Apply matrix L to r
 r # Show it's value
@@ -205,8 +230,9 @@ See how the PageRank order is established fairly quickly, and the vector converg
 Congratulations! You've just calculated your first PageRank!
 
 
-###Damping Parameter
+### Damping Parameter
 The system we just studied converged fairly quickly to the correct answer. Let's consider an extension to our micro-internet where things start to go wrong.
+
 Say a new website is added to the micro-internet: Geoff's Website. This website is linked to by FaceSpace and only links to itself.
 
 
@@ -236,10 +262,12 @@ while la.norm(lastR - r) > 0.01 :
 print(str(i) + " iterations to convergence.")
 r
 ```
-Output: 131 iterations to convergence.  
+Output: 
+131 iterations to convergence.  
 array([  0.03046998,   0.01064323,   0.07126612,   0.04423198,
          0.        ,   0.02489342,  99.81849527])
-I WONDER IF THIS IS GOING TO FORMAT MY HTML CODE FOR ME SIMPLY
+
+
 That's no good! *Geoff* seems to be taking all the traffic on the micro-internet, and somehow coming at the top of the PageRank.
 This behaviour can be understood, because once a Pat get's to *Geoff's* Website, they can't leave, as all links head back to Geoff.
 
@@ -284,7 +312,8 @@ You are now in a good position, having gained an understanding of PageRank, to p
 Good Luck!
 
 
-## Part 2 - Assessment
+# Part 2 - Assessment
+
 In this assessment, you will be asked to produce a function that can calculate the PageRank for an arbitrarily large probability matrix.
 This, the final assignment of the course, will give less guidance than previous assessments.
 You will be expected to utilize code from earlier in the worksheet and repurpose it to your needs.
@@ -323,13 +352,15 @@ def pageRank(linkMatrix, d) :
 ```
 
 
-###Testing the code:
+### Testing the code:
 ```python
 L = generate_internet(10) #This generates internets of a specified size
 pageRank(L, 1)
 ```
 Output example:
+
 13 iterations to convergence.
+
 array([ 44.11048081,   0.0000165 ,  23.5293713 ,   0.00703436,
          0.00006938,   0.00008899,   0.0000165 ,  20.58819215,
         11.7646939 ,   0.00003611])
@@ -369,4 +400,6 @@ plt.bar(arange(r.shape[0]), r);
 ```
 
 Sample Output:
+
+
 ![Sample Output of PageRank Algorithm](\assets\SampleOutputPageRank.png)
