--- a/_posts/2023-12-30-PageRank.md
+++ b/_posts/2023-12-30-PageRank.md
@@ -14,14 +14,14 @@ In linear algebra it often helps to think about matrices and vectors within a 2 
 
 
 
-# Part 1 - Worksheet
+## Part 1 - Worksheet
 The majority of this blog was written by instructors from the online coursera course “Mathematics for Machine Learning” from the Imperial College of London with slight changes and notes from me which make it easier to refer to for study.
 
 **Introduction**
 PageRank (developed by Larry Page and Sergey Brin) revolutionized web search by generating a ranked list of web pages based on the underlying connectivity of the web. The PageRank algorithm is based on an ideal random web surfer who, when reaching a page, goes to the next page by clicking on a link. The surfer has equal probability of clicking any link on the page and, when reaching a page with no links, has equal probability of moving to any other page by typing in its URL. In addition, the surfer may occasionally choose to type in a random URL instead of following the links on a page. The PageRank is the ranked order of the pages from the most to the least probable page the surfer will be viewing.
 
 
-``` python
+```python
 # Before we begin, let's load the libraries.
 %pylab notebook
 import numpy as np
@@ -312,7 +312,7 @@ You are now in a good position, having gained an understanding of PageRank, to p
 Good Luck!
 
 
-# Part 2 - Assessment
+## Part 2 - Assessment
 
 In this assessment, you will be asked to produce a function that can calculate the PageRank for an arbitrarily large probability matrix.
 This, the final assignment of the course, will give less guidance than previous assessments.
