--- a/_posts/2023-12-30-PageRank.md
+++ b/_posts/2023-12-30-PageRank.md
@@ -70,7 +70,7 @@ NumPy (Numerical Python) is an open-source Python library that's the foundationa
 
 Let's imagine a micro-internet, with just 6 websites (Avocado, Bullseye, CatBabel, Dromeda, eTings, and FaceSpace). 
 Each website links to some of the others, and this forms a network as shown,
-![A Micro-Internet](\assets\AMicroInternet.png)
+![A Micro-Internet](/assets/AMicroInternet.png)
 
 The design principle of PageRank is that important websites will be linked to by important websites. This somewhat recursive principle will form the basis of our thinking.
 
@@ -236,7 +236,7 @@ The system we just studied converged fairly quickly to the correct answer. Let's
 Say a new website is added to the micro-internet: Geoff's Website. This website is linked to by FaceSpace and only links to itself.
 
 
-![A self-referential Micro-Internet](\assets\MicroInternetwithSelfReferential.png)
+![A self-referential Micro-Internet](/assets/MicroInternetwithSelfReferential.png)
 
 
 
@@ -402,4 +402,4 @@ plt.bar(arange(r.shape[0]), r);
 Sample Output:
 
 
-![Sample Output of PageRank Algorithm](\assets\SampleOutputPageRank.png)
+![Sample Output of PageRank Algorithm](/assets/SampleOutputPageRank.png)
