--- a/_posts/2023-12-30-PageRank.md
+++ b/_posts/2023-12-30-PageRank.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Creating a PageRank algorithm with NumPy 
+title: "Creating a PageRank algorithm with NumPy"
 date: 2023-12-30 11:00:00
 categories: [Educational]
 tags: [Python, NumPy, Linear Algebra]
@@ -79,49 +79,29 @@ Imagine we have 100 Procrastinating Pats on our micro-internet, each viewing a s
 We represent the number of Pats on each website with the vector,
 r = [rA, rB, rC, rD, rE, rF]
 
-We represent the number of Pats on each website with the vector,
 
-$$
-\mathbf{r} = \begin{bmatrix} 
-r_A \\ 
-r_B \\ 
-r_C \\ 
-r_D \\ 
-r_E \\ 
-r_F 
-\end{bmatrix}
-$$
+And say that the number of Pats on each website in minute (i+1) is related to those at minute (i) by the matrix transformation
 
-And say that the number of Pats on each website in minute $i+1$ is related to those at minute $i$ by the matrix transformation
+r^(i+1) = Lr(i)
 
+with the matrix L taking the form,
 
+| L_A→A,  L_B→A,  L_C→A,  L_D→A,  L_E→A,  L_F→A |
+| L_A→B,  L_B→B,  L_C→B,  L_D→B,  L_E→B,  L_F→B |
+| L_A→C,  L_B→C,  L_C→C,  L_D→C,  L_E→C,  L_F→C |
+| L_A→D,  L_B→D,  L_C→D,  L_D→D,  L_E→D,  L_F→D |
+| L_A→E,  L_B→E,  L_C→E,  L_D→E,  L_E→E,  L_F→E |
+| L_A→F,  L_B→F,  L_C→F,  L_D→F,  L_E→F,  L_F→F |
 
-$$ \mathbf{r}^{(i+1)} = L \,\mathbf{r}^{(i)}$$
-
-with the matrix $L$ taking the form,
-
-$$ L = \begin{bmatrix}
-L_{A→A} & L_{B→A} & L_{C→A} & L_{D→A} & L_{E→A} & L_{F→A} \\
-L_{A→B} & L_{B→B} & L_{C→B} & L_{D→B} & L_{E→B} & L_{F→B} \\
-L_{A→C} & L_{B→C} & L_{C→C} & L_{D→C} & L_{E→C} & L_{F→C} \\
-L_{A→D} & L_{B→D} & L_{C→D} & L_{D→D} & L_{E→D} & L_{F→D} \\
-L_{A→E} & L_{B→E} & L_{C→E} & L_{D→E} & L_{E→E} & L_{F→E} \\
-L_{A→F} & L_{B→F} & L_{C→F} & L_{D→F} & L_{E→F} & L_{F→F} \\
-\end{bmatrix}
-$$
 
 
 where the columns represent the probability of leaving a website for any other website, and sum to one.
 The rows determine how likely you are to enter a website from any other, though these need not add to one.
-The long time behaviour of this system is when $ \mathbf{r}^{(i+1)} = \mathbf{r}^{(i)}$, so we'll drop the superscripts here, and that allows us to write,
+The long time behaviour of this system is when the vector r at iteration i+1 is equal to the matrix L multiplied by the vector at iteration i so we'll drop the superscripts here, and that allows us to write,
 
 
-$$ L \,\mathbf{r} = \mathbf{r}$$
 
-which is an eigenvalue equation for the matrix $L$, with eigenvalue 1 (this is guaranteed by the probabalistic structure of the matrix $L$).
-
-
-Complete the matrix $L$ below, we've left out the column for which websites the *FaceSpace* website (F) links to.
+Complete the matrix L below, we've left out the column for which websites the *FaceSpace* website (F) links to.
 Remember, this is the probability to click on another website from this one, so each column should add to one (by scaling by the number of links).
 
 
@@ -272,16 +252,23 @@ That's no good! *Geoff* seems to be taking all the traffic on the micro-internet
 This behaviour can be understood, because once a Pat get's to *Geoff's* Website, they can't leave, as all links head back to Geoff.
 
 
-To combat this, we can add a small probability that the Procrastinating Pats don't follow any link on a webpage, but instead visit a website on the micro-internet at random.
-We'll say the probability of them following a link is $d$ and the probability of choosing a random website is therefore $1-d$.
-We can use a new matrix to work out where the Pat's visit each minute.
-$$ M = d \, L + \frac{1-d}{n} \, J $$
-where $J$ is an $n\times n$ matrix where every element is one.
+To address this issue, we can introduce a small probability that the Procrastinating Pats don't follow any link on a webpage, but instead visit a random website on the micro-internet. Let's say the probability of them following a link is 𝑑, and the probability of choosing a random website is therefore 1−𝑑
 
 
-If d is one, we have the case we had previously, whereas if d is zero, we will always visit a random webpage and therefore all webpages will be equally likely and equally ranked.
-For this extension to work best, $1-d$ should be somewhat small - though we won't go into a discussion about exactly how small.
+We can use a new matrix to determine where the Pats visit each minute:
 
+M=d⋅L+(1−d)/n)⋅J
+
+Here, J is an 𝑛×𝑛 matrix where every element is one.
+
+* If 𝑑 is one, it means we have the same situation as before, where the Pats always follow the links.
+* If 𝑑 is zero, the Pats will always visit a random webpage, making all webpages equally likely to be visited and equally ranked.
+
+For this method to be most effective, 1−𝑑 should be relatively small. However, we won't go into the details of exactly how small it should be.
+
+-----------
+-----------
+-----------
 
 Let's retry this PageRank with this extension.
 ```python
@@ -403,3 +390,5 @@ Sample Output:
 
 
 ![Sample Output of PageRank Algorithm](/assets/SampleOutputPageRank.png)
+
+
